# bevy_spacetimedb_server_example

./: Makefile  Readme.md  cargo.toml
bevy_spacetimedb/: .gitignore  Cargo.toml  README.md
bevy_spacetimedb/src/: aliases.rs  channel_receiver.rs  events.rs  lib.rs  plugin.rs  stdb_connection.rs
bevy_spacetimedb_server/: Cargo.toml
bevy_spacetimedb_server/src/: lib.rs
client-bevy/: Cargo.toml
client-bevy/src/: main.rs
client-bevy/src/stdb/: entity_table.rs  entity_type.rs  mod.rs  process_tick_reducer.rs  receive_player_input_reducer.rs  scheduled_tick_table.rs  scheduled_tick_type.rs
server/: Cargo.toml
server/src/: lib.rs
