[package]
name = "bevy_spacetimedb_server"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[dependencies]
log = "0.4"
spacetimedb = "1.0.1"
bevy = { version = "0.16.0-rc.4", default-features = false, features = ["default_no_std"] }
once_cell = "1.19"
rand = { version = "0.8", default-features = false, features = ["alloc"] } 
spin = "0.9" # Add spin for Mutex